--- a/flexbox/1-index.html
+++ b/flexbox/1-index.html
@@ -152,7 +152,7 @@
           </div>
         </div>
       </section>
-      <!-- About Us section -->
+      <!--- About Us section --->
       <section id="about" class="section section-about-us">
         <div class="container">
           <header class="section-header">
